--- a/README
+++ b/README
@@ -5,7 +5,8 @@ to Multimodal Problem Optimization' Springer, 2009.  JADE++ is
 designed to run efficiently in parallel on multicore processors,
 multiprocessor systems, clusters and supercomputers with help of MPI.
 
-JADE++ needs MPI and Cmake installed to compile and run. 
+JADE++ needs MPI and Cmake installed to compile and run. It also needs
+C++11 compatible complier.
 
 For Debian/Ubuntu systems single line install with
 # apt-get install openmpi-bin openmpi-doc libopenmpi-dev cmake
